# sqlitegraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  manual.md
sqlitegraph/: Cargo.toml  README.md  clippy.toml  dead_code_map.md  debug_test.rs  sqlitegraph_bench.json
sqlitegraph-cli/: Cargo.toml
sqlitegraph-cli/src/: dsl.rs  lib.rs  main.rs  reasoning.rs
sqlitegraph/benches/: bench_algorithms.rs  bench_insert.rs  bench_traversal.rs  bench_utils.rs  bfs.rs  insert.rs  k_hop.rs
sqlitegraph/docs/: phase10_performance_tuning.md  phase5_real_adjacency.md  phase6_implementation_status.md  phase6_native_graphbackend_plan.md  phase7_native_backend_refactor.md
sqlitegraph/examples/: syncompat.rs
sqlitegraph/scripts/: track_benches.sh
sqlitegraph/src/: api_ergonomics.rs  backend.rs  bench_meta.rs  bench_regression.rs  cache.rs  cli_reasoning.rs  config.rs  dsl.rs  dual_orchestrator.rs  dual_runner.rs  dual_runtime.rs  errors.rs  fault_injection.rs  graph_opt.rs  index.rs  lib.rs  migration.rs  multi_hop.rs  mvcc.rs  pattern.rs  pattern_engine.rs  pattern_engine_cache.rs  pipeline.rs  query.rs  reasoning.rs  recovery.rs  reindex.rs  safety.rs  schema.rs
sqlitegraph/src/backend_client/: cli.rs  client.rs  mod.rs
sqlitegraph/src/cli_reasoning/: cli_utils.rs  command_handlers.rs  file_io.rs  mod.rs  pipeline_ops.rs
sqlitegraph/src/graph/: adjacency.rs  core.rs  edge_ops.rs  entity_ops.rs  metrics.rs  metrics_schema.rs  mod.rs  pattern_matching.rs  snapshot.rs  sqlite_graph.rs
sqlitegraph/src/pattern_engine/: matcher.rs  mod.rs  pattern.rs  property.rs  query.rs  tests.rs
sqlitegraph/tests/: algo_tests.rs  backend_entry_tests.rs  backend_selector_tests.rs  backend_trait_tests.rs  bench_data_tests.rs  bench_gates_tests.rs  bench_meta_tests.rs  bench_report_tests.rs  cli_recovery_tests.rs  cli_safety_tests.rs  cli_tests.rs  deterministic_index_tests.rs  doc_tests.rs  dsl_fuzz_tests.rs  dsl_tests.rs  dual_runner_tests.rs  dual_runtime_tests.rs  dual_write_tests.rs  edge_tests.rs  fault_injection_tests.rs  fuzz_common.rs  graph_opt_tests.rs  index_tests.rs  integration_tests.rs  lib_api_smoke_tests.rs  migration_runner_tests.rs  multi_hop_tests.rs  mvcc_snapshot_tests.rs  native_backend_storage_tests.rs  pattern_cache_fastpath_tests.rs  pattern_engine_tests.rs  pattern_tests.rs  pipeline_tests.rs  query_tests.rs  recovery_fuzz_tests.rs  recovery_tests.rs  safety_tests.rs  schema_tests.rs  wal_tuning_tests.rs
(+120 files in other folders)
