[package]
name = "sqlitegraph"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
parking_lot = "0.12"
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"

[features]
default = ["sqlite-backend"]
bench-ci = []
sqlite-backend = []

[[bin]]
name = "bench_driver"
path = "src/bin/bench_driver.rs"

[[bin]]
name = "sqlitegraph"
path = "src/bin/sqlitegraph.rs"

[[bench]]
name = "bench_insert"
harness = false

[[bench]]
name = "bench_traversal"
harness = false

[[bench]]
name = "bench_algorithms"
harness = false

[[bench]]
name = "bench_syncompat"
harness = false
