[package]
name = "sqlitegraph-cli"
version = "0.2.0"
edition = "2021"
description = "Command-line interface for SQLiteGraph graph database"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/sqlitegraph"

keywords = ["graph", "database", "sqlite", "cli", "embedded"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "sqlitegraph-cli"
path = "src/main.rs"

[dependencies]
sqlitegraph = "0.2.0"
serde_json = "1"