[package]
name = "sqlitegraph"
version = "0.1.1"
edition = "2024"
description = "Deterministic, embedded graph database built on SQLite"
license = "GPL-3.0-or-later"
repository = "https://github.com/oldnordic/sqlitegraph"
documentation = "https://docs.rs/sqlitegraph"
readme = "README.md"
keywords = ["graph", "database", "sqlite", "embedded", "deterministic"]
categories = ["database", "data-structures"]

[lib]
name = "sqlitegraph"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ahash = "0.8"
parking_lot = "0.12"
rand = "0.8"
arc-swap = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_cmd = "2"
tempfile = "3"

[features]
default = ["sqlite-backend"]
bench-ci = []
sqlite-backend = []

[[bin]]
name = "bench_driver"
path = "src/bin/bench_driver.rs"

[[bench]]
name = "bench_insert"
harness = false

[[bench]]
name = "bench_traversal"
harness = false

[[bench]]
name = "bench_algorithms"
harness = false

[[bench]]
name = "bench_syncompat"
harness = false
